--- a/src/pages/Journal/SingleJournal.css
+++ b/src/pages/Journal/SingleJournal.css
@@ -62,6 +62,10 @@
     color: #555;
     padding: 0 10px;
 }
+.singleJournal-content-container > p {
+    white-space: pre-wrap; /* Preserves whitespace */
+    word-wrap: break-word; /* Allows word break to prevent overflow */
+}
 
 .singleJournal-options-container {
     display: flex;
